--- a/exercicios/ex05/style.css
+++ b/exercicios/ex05/style.css
@@ -7,12 +7,18 @@ header{
     color: white;
 }
 section{
-    height: 500px;
     width: 500px;
     background-color: white;
     margin: auto;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.563);
+    padding: 10px 30px;
+}
+.alinhar{
+    text-align: center;
+}
+select{
+    width: 250px;
 }
 footer{
     text-align: center;
